--- a/src/main/webapp/resources/home/css/style.css
+++ b/src/main/webapp/resources/home/css/style.css
@@ -3327,7 +3327,7 @@ p.cart a {
 	}
 	.cust {
 		float: left;
-		width: 33,3%;
+		width: 33, 3%;
 	}
 	.cr_btn a {
 		padding: 3px 12px;
@@ -3335,11 +3335,11 @@ p.cart a {
 	}
 	.abt {
 		float: left;
-		width: 33,3%;
+		width: 33, 3%;
 	}
 	.myac {
 		float: left;
-		width: 33,3%;
+		width: 33, 3%;
 	}
 	.our-st {
 		float: left;
@@ -4132,4 +4132,63 @@ p.cart a {
 
 .dropdown:hover .dropdown-content {
 	display: block;
+}
+
+.image-responsive {
+	width: 100%;
+	height: auto;
+}
+
+.sky-form h4 {
+	color: #3f3d3d;
+}
+
+.sky-form label {
+	border-bottom: solid 1px #dddddd;
+}
+
+.sky-form a {
+	color: #3f3d3d;
+}
+
+.sky-form a:hover {
+	text-decoration: none;
+	color: #ef5f21;
+}
+
+.res-page {
+	margin-bottom: 20px;
+}
+
+.res-page img {
+	max-width: 100%;
+	height: auto;
+}
+
+.res-page .res-table {
+	overflow-x:auto;
+}
+
+.res-page .res-table table {
+	border-collapse: collapse;
+	border-spacing: 0;
+	width: 100%;
+}
+
+.res-page .iframe-container {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.res-page .iframe-container .responsive-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
 }
